# q2connect

./: CMakeLists.txt  README.md  build-lin.sh  q2connect.desktop.example  q2connect.json
src/: main.cpp
